--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Climb On</title>
 </head>
 <body>
-  <script src="/bundle.js"></script>
+  <div id="app"></div>
+  <script src="/bundle.js" defer async></script>
 </body>
 </html>
