--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="mobile-web-app-capable" content="yes">
   <title>Climb On</title>
+  <link rel="stylesheet" href="/sanitize.css" media="screen" charset="utf-8">
 </head>
 
 <body>
